# edgee

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile  NOTICE  README.md  flake.nix  install.ps1  install.sh
.claude/: launcher-config.json
.github/: CODEOWNERS
.github/workflows/: check.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: api.rs  config.rs  crypto.rs  git.rs  local_gateway.rs  main.rs  version_check.rs
crates/cli/src/commands/: alias.rs  claude_settings.rs  doctor.rs  fix.rs  install.rs  local_gateway.rs  mod.rs  settings.rs  stats.rs  update.rs
crates/cli/src/commands/alias/: desktop.rs  mod.rs
crates/cli/src/commands/auth/: list.rs  login.rs  mod.rs  status.rs  switch.rs
crates/cli/src/commands/launch/: README.md  claude.rs  claude_desktop.rs  codebuddy.rs  codex.rs  copilot_vscode.rs  crush.rs  cursor.rs  mod.rs  opencode.rs  statusline.rs  statusline.sh
crates/cli/src/commands/launch/util/: binary.rs  debug_log.rs  gateway.rs  install.rs  mod.rs
crates/cli/src/commands/relay/: handler.rs  mod.rs
crates/cli/src/commands/statusline/: mod.rs  render.rs  width.rs  wrap.rs
crates/cli/src/commands/statusline/claude/: doctor.rs  fix.rs  install.rs  mod.rs  toggle.rs
crates/cli/src/commands/util/: mod.rs
crates/cli/src/commands/util/session_log/: display.rs  log.rs  mod.rs
crates/compression-layer/: Cargo.toml  README.md
crates/compression-layer/src/: compress.rs  config.rs  dispatch.rs  layer.rs  lib.rs  metrics.rs  service.rs  system_prompt_cache.rs  technique.rs
crates/compression-layer/src/compress/: dispatch.rs  mod.rs  passthrough.rs
crates/compression-layer/src/passthrough/: compress.rs  mod.rs
crates/compression-layer/tests/: integration.rs
crates/compressor/: Cargo.toml  README.md
crates/compressor/benches/: compressor.rs
crates/compressor/src/: lib.rs  util.rs
crates/compressor/src/strategy/: mod.rs  util.rs
crates/compressor/src/strategy/bash/: cargo.rs  curl.rs  diff.rs  docker.rs  env.rs  eslint.rs  find.rs  go.rs  golangci_lint.rs  grep.rs  ls.rs  make.rs  mod.rs  npm.rs  psql.rs  pytest.rs  tree.rs  tsc.rs
crates/compressor/src/strategy/bash/fs/: find.rs  grep.rs  mod.rs  rg.rs
crates/compressor/src/strategy/bash/go/: mod.rs
crates/compressor/src/strategy/bash/js/: eslint.rs  jest.rs  mod.rs  next.rs  playwright.rs  pnpm.rs  prettier.rs  prisma.rs  tsc.rs
crates/compressor/src/strategy/bash/python/: mod.rs  mypy.rs  pip.rs  pytest.rs  ruff.rs
crates/compressor/src/strategy/bash/rust/: mod.rs
crates/compressor/src/strategy/bash/sys/: docker.rs  mod.rs  wc.rs
crates/compressor/src/strategy/bash/vcs/: gh.rs  git.rs  glab.rs  gt.rs  mod.rs
crates/compressor/src/strategy/claude/: bash.rs  glob.rs  grep.rs  mod.rs  read.rs
crates/compressor/src/strategy/codex/: mod.rs
crates/compressor/src/strategy/cursor/: mod.rs
crates/compressor/src/strategy/opencode/: mod.rs  read.rs
crates/compressor/src/strategy/tools/: heuristic.rs  mod.rs  tokenize.rs
crates/gateway-core/: Cargo.toml  README.md
crates/gateway-core/src/: config.rs  error.rs  lib.rs  provider.rs  region.rs  service.rs  testing.rs
crates/gateway-core/src/backend/: http.rs
crates/gateway-core/src/passthrough/: anthropic.rs  mod.rs  openai.rs
crates/gateway-core/src/types/: message.rs  mod.rs  passthrough.rs  request.rs  response.rs
crates/gateway-http/: Cargo.toml  README.md
crates/gateway-http/src/: error.rs  lib.rs  passthrough.rs  service.rs
doc/: architecture.md
src/: api.rs  config.rs  main.rs
src/commands/: init.rs  macros.rs  mod.rs  reset.rs  update.rs
src/commands/auth/: login.rs  mod.rs  status.rs
src/commands/launch/: claude.rs  codex.rs  mod.rs
src/commands/suggest/: loader.rs  mod.rs  suggest.rs
