[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
license = "Apache-2.0"
homepage = "https://www.edgee.cloud"
repository = "https://github.com/edgee-ai/edgee"

[workspace.dependencies]
# Workspace crates
edgee-gateway-core      = { path = "crates/gateway-core" }
edgee-gateway-http      = { path = "crates/gateway-http" }
edgee-compressor        = { path = "crates/compressor" }
edgee-compression-layer = { path = "crates/compression-layer" }

# External dependencies
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8", default-features = false }
axum-core = "0.5.6"
bon = "3.9.1"
bytes = "1.11.1"
clap = "4.6.1"
colored = "3.1.1"
console = "0.16.3"
dialoguer = "0.12.0"
futures = "0.3.32"
headers = "0.4.1"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
open = "5.3.4"
reqwest = { version = "0.13.2", default-features = false }
regex = "1.12.3"
self_update = { version = "0.44.0", default-features = false }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
time = "0.3.47"
tokio = "1.52.1"
toml = "1.1.2"
tower = "0.5.3"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3"
uuid = "1.23.1"
