[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
license = "Apache-2.0"
homepage = "https://www.edgee.cloud"
repository = "https://github.com/edgee-ai/edgee"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum-core = "0.5"
bytes = "1"
clap = "4"
colored = "3"
console = "0.16"
dialoguer = "0.12"
futures = "0.3"
http = "1"
http-body-util = "0.1"
open = "5"
reqwest = { version = "0.13", default-features = false }
regex = "1"
self_update = { version = "0.44", default-features = false }
serde = "1"
serde_json = "1"
thiserror = "2"
time = { version = "0.3" }
tokio = "1"
toml = "1.1"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
unicode-width = "0.2"
uuid = "1"
