[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
license = "Apache-2.0"
homepage = "https://www.edgee.cloud"
repository = "https://github.com/edgee-ai/edgee"

[workspace.dependencies]
# External dependencies
anyhow = "1.0.102"
argon2 = "0.5.3"
base64 = "0.22"
bytes = "1.11.1"
clap = "4.6.1"
colored = "3.1.1"
console = "0.16.3"
dialoguer = "0.12.0"
etcetera = "0.11.0"
http = "1.4.0"
http-body-util = "0.1.3"
hudsucker = "0.24"
open = "5.3.4"
rand = "0.10"
rcgen = "0.14"
reqwest = { version = "0.13.2", default-features = false }
regex = "1.12.3"
self_update = { version = "0.44.0", default-features = false }
serde = "1.0.228"
serde_json = "1.0.149"
time = "0.3.47"
tokio = "1.52.1"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3"
unicode-width = "0.2"
uuid = "1.23.1"
x25519-dalek = "3.0.0"
