[package]
name = "edgee-cli"
version = "0.2.4"
edition = "2021"

[[bin]]
name = "edgee"
path = "src/main.rs"

[dependencies]
# Workspace crates
edgee-gateway-core = { workspace = true, features = ["tokio"] }
edgee-gateway-http.workspace = true
edgee-compression-layer.workspace = true

# External dependencies
anyhow.workspace = true
axum = { workspace = true, features = ["http1", "tokio"] }
axum-core.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
colored.workspace = true
console.workspace = true
dialoguer.workspace = true
http.workspace = true
open.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal", "io-util", "process", "time", "fs"] }
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
self_update = { workspace = true, optional = true, features = ["reqwest", "rustls"] }
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
unicode-width.workspace = true

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
which = "8"

[features]
default = ["self-update"]
self-update = ["dep:self_update"]
