[package]
name = "edgee-compression-layer"
version = "0.1.0"
edition = "2024"
description = "Tower Layer that compresses LLM tool-result content before provider dispatch"

[dependencies]
# Workspace crates
edgee-gateway-core.workspace = true
edgee-compressor.workspace   = true

# External dependencies
serde_json.workspace = true
tower.workspace      = true
tracing.workspace    = true
