[package]
name = "edgee-compressor"
version = "0.1.2"
edition = "2024"
description = "HTTP response compression library for Edgee"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# External dependencies
serde     = { workspace = true, features = ["derive"] }
serde_json.workspace = true
regex    .workspace = true
tracing  .workspace = true
